inicia modelado de la receta

--- a/ms-search-recipe/src/main/resources/application.properties
+++ b/ms-search-recipe/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+## APLICATION CONFIG
 spring.application.name=ms-search-recipe
+debug=true
+
+## LOGGING CONFING
+logging.level.org.springframework.web=DEBUG
+logging.level.root=INFO
+logging.level.org.hibernate=DEBUG
+logging.level.org.springframework=DEBUG
+
+## MONGO DB CONNECTION
+spring.data.mongodb.uri=mongodb+srv://admin-govegan:zMtj80lO2iuPb8IT@govegan-cluster.ixmcw2e.mongodb.net/ms-recipe
+spring.data.mongodb.database=ms-recipe
