--- a/ms-search-recipe/src/main/resources/application.properties
+++ b/ms-search-recipe/src/main/resources/application.properties
@@ -3,11 +3,11 @@ spring.application.name=ms-search-recipe
 debug=true
 
 ## LOGGING CONFING
-logging.level.org.springframework.web=DEBUG
 logging.level.root=INFO
 logging.level.org.hibernate=DEBUG
 logging.level.org.springframework=DEBUG
 
-## MONGO DB CONNECTION
+## MONGO DB CONFIG
 spring.data.mongodb.uri=mongodb+srv://admin-govegan:zMtj80lO2iuPb8IT@govegan-cluster.ixmcw2e.mongodb.net/ms-recipe
 spring.data.mongodb.database=ms-recipe
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=ERROR
