--- a/ms-search-recipe/pom.xml
+++ b/ms-search-recipe/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>ms-search-recipe</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ms-search-recipe</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Microservicio ms-search-recipe</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
