--- a/ms-search-recipe/src/main/resources/application.properties
+++ b/ms-search-recipe/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 ## APLICATION CONFIG
 spring.application.name=ms-search-recipe
-debug=true
 
 ## LOGGING CONFING
 logging.level.root=INFO
-logging.level.org.hibernate=DEBUG
-logging.level.org.springframework=DEBUG
+logging.level.org.hibernate=INFO
+logging.level.org.springframework=INFO
 
 ## MONGO DB CONFIG
 spring.data.mongodb.uri=mongodb+srv://admin-govegan:zMtj80lO2iuPb8IT@govegan-cluster.ixmcw2e.mongodb.net/ms-recipe
