--- a/ms-search-recipe/docker-compose.yml
+++ b/ms-search-recipe/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '1'
 services: 
   ms-search-recipe:
     build:
@@ -6,6 +5,11 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
+    develop:
+      watch:
+        - action: sync
+          path: .
+          target: /ms-search-recipe
     environment:
       - spring.data.mongodb.uri=mongodb+srv://admin-govegan:zMtj80lO2iuPb8IT@govegan-cluster.ixmcw2e.mongodb.net/ms-recipe
       - spring.data.mongodb.database=ms-recipe
