--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,6 +26,16 @@
          "projectName": "ms-search-recipe",
          "args": "",
          "envFile": "${workspaceFolder}/.env"
+      },
+      {
+         "type": "java",
+         "name": "Spring Boot-MsAuthApplication<ms-auth>",
+         "request": "launch",
+         "cwd": "${workspaceFolder}",
+         "mainClass": "cl.govegan.msauth.MsAuthApplication",
+         "projectName": "ms-auth",
+         "args": "",
+         "envFile": "${workspaceFolder}/.env"
       }
    ]
 }
