--- a/ms-auth/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/ms-auth/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -8,5 +8,10 @@
     "name": "jwt.expiration",
     "type": "java.lang.String",
     "description": "A description for 'jwt.expiration'"
+  },
+  {
+    "name": "jwt.refresh.expiration",
+    "type": "java.lang.String",
+    "description": "A description for 'jwt.refresh.expiration'"
   }
 ]}
