--- a/ms-auth-user/Dockerfile
+++ b/ms-auth-user/Dockerfile
@@ -1,7 +1,7 @@
 # Dockerfile
 FROM maven:3.9.6-eclipse-temurin-17 AS buildstage
 
-WORKDIR /ms-auth
+WORKDIR /ms-auth-user
 
 COPY . .
 
@@ -9,6 +9,6 @@ RUN mvn clean package
 
 FROM openjdk:21-ea-24-oracle
 
-COPY --from=buildstage /ms-auth/target/ms-auth-0.0.1-SNAPSHOT.jar ms-auth.jar
+COPY --from=buildstage /ms-auth-user/target/ms-auth-0.0.1-SNAPSHOT.jar ms-auth-user.jar
 
-ENTRYPOINT ["java", "-jar", "ms-auth.jar"]
+ENTRYPOINT ["java", "-jar", "ms-auth-user.jar"]
