--- a/ms-auth-user/src/main/resources/application.properties
+++ b/ms-auth-user/src/main/resources/application.properties
@@ -8,8 +8,8 @@ logging.level.org.hibernate=INFO
 logging.level.org.springframework=INFO
 
 ## MONGO DB CONFIG
-spring.data.mongodb.uri=mongodb+srv://admin-govegan:zMtj80lO2iuPb8IT@govegan-cluster.ixmcw2e.mongodb.net/ms-auth
-spring.data.mongodb.database=ms-auth
+spring.data.mongodb.uri=mongodb+srv://admin-govegan:zMtj80lO2iuPb8IT@govegan-cluster.ixmcw2e.mongodb.net/ms-auth-user
+spring.data.mongodb.database=ms-auth-user
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=ERROR
 spring.data.mongodb.auto-index-creation=true
 
