--- a/ms-search-food/src/main/resources/application.properties
+++ b/ms-search-food/src/main/resources/application.properties
@@ -7,6 +7,6 @@ logging.level.org.hibernate=INFO
 logging.level.org.springframework=INFO
 
 ## MONGO DB CONFIG
-spring.data.mongodb.uri=mongodb+srv://admin-govegan:zMtj80lO2iuPb8IT@govegan-cluster.ixmcw2e.mongodb.net/ms-recipe
-spring.data.mongodb.database=ms-recipe
+spring.data.mongodb.uri=mongodb+srv://admin-govegan:zMtj80lO2iuPb8IT@govegan-cluster.ixmcw2e.mongodb.net/ms-search-food
+spring.data.mongodb.database=ms-search-food
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=ERROR
