--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
    "java.configuration.updateBuildConfiguration": "interactive",
-   "java.compile.nullAnalysis.mode": "automatic"
+   "java.compile.nullAnalysis.mode": "automatic",
+   "java.dependency.packagePresentation": "hierarchical",
+   "java.project.explorer.showNonJavaResources": false
 }
