--- a/ms-search-food/Dockerfile
+++ b/ms-search-food/Dockerfile
@@ -1,7 +1,7 @@
 # Dockerfile
 FROM maven:3.9.6-eclipse-temurin-17 AS buildstage
 
-WORKDIR /ms-search-recipe
+WORKDIR /ms-search-food
 
 COPY . .
 
@@ -9,7 +9,7 @@ RUN mvn clean package
 
 FROM openjdk:21-ea-24-oracle AS runstage
 
-COPY --from=buildstage /ms-search-recipe/target/ms-search-recipe-0.0.1-SNAPSHOT.jar ms-search-recipe.jar
+COPY --from=buildstage /ms-search-food/target/ms-search-food-0.0.1-SNAPSHOT.jar ms-search-food.jar
 
-ENTRYPOINT ["java", "-jar", "ms-search-recipe.jar"]
+ENTRYPOINT ["java", "-jar", "ms-search-food.jar"]
 
