--- a/ms-auth-user/src/main/resources/application.properties
+++ b/ms-auth-user/src/main/resources/application.properties
@@ -6,6 +6,10 @@ server.port=8081
 logging.level.root=INFO
 logging.level.org.hibernate=INFO
 logging.level.org.springframework=INFO
+logging.level.cl.govegan.msauthuser=INFO
+
+#SPRING SECURITY CONFIG
+logging.level.org.springframework.security=DEBUG
 
 ## MONGO DB CONFIG
 spring.data.mongodb.uri=mongodb+srv://admin-govegan:zMtj80lO2iuPb8IT@govegan-cluster.ixmcw2e.mongodb.net/ms-auth-user
