--- a/ms-search-food/src/main/resources/application.properties
+++ b/ms-search-food/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=ms-search-recipe
 server.port=8080
 
 ## LOGGING CONFING
-logging.level.root=INFO
-logging.level.org.hibernate=INFO
-logging.level.org.springframework=INFO
+logging.level.root=DEBUG
+logging.level.org.hibernate=DEBUG
+logging.level.org.springframework=DEBUG
 
 ## MONGO DB CONFIG
 spring.data.mongodb.uri=mongodb+srv://admin-govegan:zMtj80lO2iuPb8IT@govegan-cluster.ixmcw2e.mongodb.net/ms-search-food?retryWrites=true&w=majority&connectTimeoutMS=60000&socketTimeoutMS=120000
